Changes with lua-resty-session 2.3                               16 Oct 2015

    *) Bugfix: Fixes issue #19 where regenerating session would
       throw an error when using cookie storage.

       See Also: https://github.com/bungle/lua-resty-session/issues/19

       Thanks @hulu1522

Changes with lua-resty-session 2.2                               17 Sep 2015

    *) Change: Removed all session_cipher_* deprecated settings
       (it was somewhat broken in 2.1).

    *) Change: Changed session secret to be by default 32 bytes random data

    See Also: https://github.com/bungle/lua-resty-session/issues/18

    Thanks @iain-buclaw-sociomantic

    *) Documentation: Added documentation about removed features and
       corrected about session secret size accordingly.

Changes with lua-resty-session 2.1                                7 Sep 2015

    *) Feature: Added architecture for Cipher adapter plugins.

    See Also: https://github.com/bungle/lua-resty-session/issues/16

    Thanks @mingfang

    *) Feature: Implemented AES cipher adapter (just like it was before)

    *) Feature: Implemented None cipher adapter (no encryption)

    *) Change: Changed JSON serializer to use cjson.safe instead

    *) Documentation: Added documentation about pluggable ciphers

Changes with lua-resty-session 2.0                               31 Aug 2015

    *) Feature: Added architecture for Storage adapter plugins.

       See Also: https://github.com/bungle/lua-resty-session/issues/13

    *) Feature: Implemented Client Side Cookie storage adapter.

    *) Feature: Implemented Memcache storage adapter.

       See Also: https://github.com/bungle/lua-resty-session/pull/14

       Thanks @zandbelt

    *) Feature: Implemented Redis storage adapter.

    *) Feature: Implemented Shared Dictionary (shm) storage adapter.

    *) Feature: Added architecture for Encoder and Decoder plugins.

    *) Feature: Implemented Base 64 encoder / decoder.
