@@ -1,4 +1,4 @@
-Copyright (c) 2014, Aapo Talvensaari
+Copyright (c) 2014 – 2016, Aapo Talvensaari
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
