@@ -5,6 +5,7 @@ local concat       = table.concat
 local floor        = math.floor
 local sleep        = ngx.sleep
 local now          = ngx.now
+local var          = ngx.var
 
 local function enabled(val)
     if val == nil then return nil end
@@ -12,16 +13,16 @@ local function enabled(val)
 end
 
 local defaults = {
-    prefix       = ngx.var.session_memcache_prefix or "sessions",
-    socket       = ngx.var.session_memcache_socket,
-    host         = ngx.var.session_memcache_host or "127.0.0.1",
-    port         = tonumber(ngx.var.session_memcache_port) or 11211,
-    uselocking   = enabled(ngx.var.session_memcache_uselocking or true),
-    spinlockwait = tonumber(ngx.var.session_memcache_spinlockwait) or 10000,
-    maxlockwait  = tonumber(ngx.var.session_memcache_maxlockwait) or 30,
+    prefix       = var.session_memcache_prefix                 or "sessions",
+    socket       = var.session_memcache_socket,
+    host         = var.session_memcache_host                   or "127.0.0.1",
+    port         = tonumber(var.session_memcache_port)         or 11211,
+    uselocking   = enabled(var.session_memcache_uselocking     or true),
+    spinlockwait = tonumber(var.session_memcache_spinlockwait) or 10000,
+    maxlockwait  = tonumber(var.session_memcache_maxlockwait)  or 30,
     pool = {
-        timeout  = tonumber(ngx.var.session_memcache_pool_timeout),
-        size     = tonumber(ngx.var.session_memcache_pool_size)
+        timeout  = tonumber(var.session_memcache_pool_timeout),
+        size     = tonumber(var.session_memcache_pool_size)
     }
 }
 
